# pokemon-mcp-stdio

./: README.md  pyproject.toml
client/: main.py
server/: main.py
web-client/: README.md
web-client/pokemon-mcp-server/: main.py
web-client/pokemon-next-client/: .env.example  README.md  package-lock.json  package.json  pnpm-lock.yaml
web-client/pokemon-next-client/app/: layout.tsx  page.tsx
web-client/pokemon-next-client/app/api/chat/: route.ts
